# axa-fr-app-settings

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: .env.example  api_settings.py  configuration_sections.py  custom_keyvault_source.py  reload_on_change_example.py  settings.development.yaml  settings.json  settings.yaml
src/axa_fr_app_settings/: __init__.py  base.py  builder.py  configuration.py  merge.py  sources.py  watcher.py
tests/: test_builder.py  test_configuration.py  test_watcher.py
